@@ -6,6 +6,7 @@ procps-ng-NEXT
   * tests: Conditionally add prctl Debian #816237
   * pidof: check cmd if space in argv0. GitLab #4
   * kill: report error if cannot kill process #733172
+  * watch: Add hostname to header
 
 procps-ng-3.3.11
 ----------------
